Bug 820279 - [Captive Portal] Notification for available WiFi network which uses a captive portal

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -268,3 +268,5 @@ persona-signin=Sign In
 # Remote Debugger Connection Dialog
 remoteDebuggerMessage=An incoming request to permit remote debugging connection was detected. Allow connection?
 
+#captive wifi
+captive-wifi-available=The network {{neworkName}} was found. Join network?
