Bug 820288 - [Captive Portal] Need the notification to disappear - fix typo

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -269,4 +269,4 @@ persona-signin=Sign In
 remoteDebuggerMessage=An incoming request to permit remote debugging connection was detected. Allow connection?
 
 #captive wifi
-captive-wifi-available=The network {{neworkName}} was found. Join network?
+captive-wifi-available=The network {{networkName}} was found. Join network?
